crates/toml/tests/snapshots/invalid/table/append-with-dotted-keys-03.stderr
TOML parse error at line 4, column 3
  |
4 | b.y = 2
  |   ^
duplicate key
